<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgc"
    tools:context=".DessertMenu">

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/cfb"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/cake"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bmjua"
            android:text="@string/category_cake"
            android:textColor="@color/black"
            android:textSize="19dp" />

        <RadioButton
            android:id="@+id/icecream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_icecream"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sandwich"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/bakery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_bakery"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/salad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_salad"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/bingsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_bingsu"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_etc"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goback"
        android:text="@string/goback"
        android:fontFamily="@font/bmjua"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />
</androidx.constraintlayout.widget.ConstraintLayout>