<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_caffein">

    <fragment
        android:id="@+id/nav_caffein"
        android:name="com.example.cafebot_nav.ui.gallery.GalleryFragment"
        android:label="@string/menu_caffein"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_decaf"
        android:name="com.example.cafebot_nav.ui.home.HomeFragment"
        android:label="@string/menu_dessert"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cafebot_nav.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_coffeedrink"
        tools:layout="@layout/fragment_slideshow" />

</navigation>