<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentBlended">

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/frappe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bmjua"
            android:text="@string/category_frappe"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_shake"
            android:fontFamily="@font/bmjua"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/smoothie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_smoothie"
            android:fontFamily="@font/bmjua"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/juice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_juice"
            android:fontFamily="@font/bmjua"
            android:textColor="@color/black"/>


    </RadioGroup>

</FrameLayout>