<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgc"
    tools:context=".DrinkMenu">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:fontFamily="@font/bmjua"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/bgc"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/caffeine"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bmjua"
            android:onClick="selectCaffeine"
            android:text="@string/category_caffeine"
            android:textColor="@color/black"
            android:textSize="19dp" />

        <RadioButton
            android:id="@+id/decaffeine"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="selectElse"
            android:text="@string/category_decaffeine"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/latte"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="selectElse"
            android:text="@string/category_latte"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/blended"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="selectBlended"
            android:text="@string/category_blended"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/yogurt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="selectElse"
            android:text="@string/category_yogurt"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/ade"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="selectElse"
            android:text="@string/category_ade"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/tea"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="selectElse"
            android:text="@string/category_tea"
            android:fontFamily="@font/bmjua"
            android:textSize="19dp"
            android:textColor="@color/black"/>

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goback"
        android:text="적 용"
        android:fontFamily="@font/bmjua"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_container" />

</androidx.constraintlayout.widget.ConstraintLayout>