<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/bgc"
    tools:context=".FilterActivity">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/sortLow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_low"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bmjua"/>

        <RadioButton
            android:id="@+id/sortHigh1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_high"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bmjua"/>
    </RadioGroup>

    <Button
        android:id="@+id/goback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goback"
        android:text="@string/goback"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bmjua"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

</androidx.constraintlayout.widget.ConstraintLayout>